# omppp

./: AGENTS.md  Cargo.toml  README.md  osv-scanner.toml  package.json  repro_pty.rs  stats utils.py  test-pty.ts
.github/workflows/: ci.yml
crates/pi-ast/: Cargo.toml
crates/pi-ast/src/: summary.rs
crates/pi-natives/: Cargo.toml  build.rs
crates/pi-natives/src/: ast.rs  highlight.rs  lib.rs  pty.rs  shell.rs  summary.rs
crates/pi-natives/src/chunk/: state.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: lib.rs  process.rs  shell.rs  windows.rs
crates/pi-shell/src/minimizer/: pipeline.rs
docs/: agent-state-monitor-extension.md  compaction.md  config-usage.md  environment-variables.md  hooks.md  porting-to-natives.md  python-repl.md  task-agent-discovery.md
docs/superpowers/plans/: 2026-05-28-workflow-orchestration.md  2026-06-01-context-gc-plugin.md
docs/tools/: bash.md  read.md  search_tool_bm25.md  task.md
patches/: fastembed@2.1.0.patch
scripts/: ci-release-build-binaries.ts  ci-release-publish.ts  ci-test-ts.sh  edit_benchmark_common.py  install-security.test.ts  install.ps1  install.sh  rate-edit-tool.py  release-workflow.test.ts  release.ts  repro-stuck.ts
scripts/install-tests/: binary.dockerfile  run-ci.sh  source.dockerfile  tarball.dockerfile
